--- a/Documentation/templates/index.html
+++ b/Documentation/templates/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Zancmok Documentation</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
-
+    <div class="main-div">
+        <h1 class="title">Zancmok Documentation</h1>
+        <div class="table">
+            <div>
+                Search: <input>
+            </div>
+            <ul>
+                <li>Test1</li>
+                <li>Test2</li>
+                <li>Test3</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
